--- a/app/src/main/res/layout/activity_text_editor.xml
+++ b/app/src/main/res/layout/activity_text_editor.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight=".9"
+        android:id="@+id/scroll"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:background="@color/white">
 
@@ -29,13 +29,28 @@
 
     <Button
         android:id="@+id/button8"
-        android:layout_weight=".1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/save"
         style="?android:attr/borderlessButtonStyle"
         android:background="@color/black"
         android:textColor="@color/white"
+        android:layout_alignParentBottom="true"
+
         />
 
-</LinearLayout>
+   <!-- <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/button8"
+        android:layout_alignEnd="@id/scroll"
+        android:layout_gravity="bottom|end"
+        android:layout_marginStart="@dimen/fab_margin"
+        android:layout_marginTop="@dimen/fab_margin"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="@dimen/fab_margin"
+        app:backgroundTint="@color/red"
+        app:srcCompat="@android:drawable/ic_menu_camera" />-->
+
+</RelativeLayout>
