--- a/app/src/main/res/layout/view_lesson_layout.xml
+++ b/app/src/main/res/layout/view_lesson_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="72dp"
     android:orientation="horizontal"
@@ -33,7 +34,7 @@
             android:layout_margin="5dp"/>
 
     </LinearLayout>
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_weight=".75"
         android:layout_height="match_parent"
@@ -50,7 +51,20 @@
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:lines="2"
-                android:layout_margin="5dp"/>
-        </LinearLayout>
+                android:layout_margin="5dp"
+                android:layout_toStartOf="@+id/imageView2"/>
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_alignParentEnd="true"
+            android:layout_marginVertical="24dp"
+            android:layout_marginEnd="12dp"
+            app:srcCompat="@drawable/ic_school_black_24dp" />
+
+    </RelativeLayout>
+
 
 </LinearLayout>
