--- a/app/src/main/res/layout/view_todo_layout.xml
+++ b/app/src/main/res/layout/view_todo_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="72dp"
     android:orientation="horizontal">
@@ -16,7 +17,7 @@
         android:layout_margin="5dp"
         android:textColor="@color/black"/>
     </LinearLayout>
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -25,22 +26,41 @@
         <TextView
             android:id="@+id/name_tv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:lines="1"
             android:textSize="24sp"
+            android:layout_height="32dp"
             android:textColor="@color/black"
             android:gravity="center"
             android:layout_gravity="center"
-            android:layout_margin="8dp"/>
+            android:layout_marginVertical="5dp"
+            android:layout_margin="5dp"
+            android:layout_toStartOf="@+id/imageView"
+            android:layout_alignParentTop="true"/>
+
         <TextView
             android:id="@+id/version_tv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:lines="1"
-            android:textSize="18sp"
+            android:layout_height="32dp"
             android:layout_marginHorizontal="8dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_alignParentBottom="true"
+            android:layout_toStartOf="@+id/imageView"
+            android:lines="1"
+            android:textSize="18sp" />
 
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginVertical="24dp"
+            android:layout_marginEnd="12dp"
+            app:srcCompat="@drawable/ic_event_note_black_24dp2" />
+
+
+    </RelativeLayout>
 
 </LinearLayout>
